preventing long names going off screen

--- a/client/src/components/userList/userList.module.css
+++ b/client/src/components/userList/userList.module.css
@@ -3,4 +3,5 @@
   height: 100%;
   flex: 1;
   overflow: auto;
+  word-wrap: break-word;
 }
